--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,45 @@
 /*  your css code here. If applicable */
+#container{
+	height:57%;
+	width:30%;
+	margin-left:20%;
+	display:flex;
+   box-shadow: 5px 5px 5px 5px lightblue;
+	display: block;
+}
+
+
+#image{
+	height:30%;
+	width:50%;
+	margin-left:12%;
+	padding-top: 10%;
+}
+
+#container>h1{
+	height:30%;
+	width:55%;
+	margin-left:20%;
+}
+
+#container>p{
+	height:30%;
+	width:55%;
+	margin-left:20%;
+	font-weight: bold;
+}
+
+
+#container>button{
+	height:30%;
+	width: 45%;
+	margin-left:20%;
+	background-color: #CD5C5C;
+  border: none;
+	border-radius: 35%;
+  color: white;
+  padding: 6% 3%;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
